<resources>
    <string name="app_name">Chapitre3Activity</string>
    <string name="hello_word">Hello Word!</string>
    <string name="start_button">START USER</string>
    <string name="button1">wrap_content-wrap_content</string>
    <string name="button2">match_parent-wrap_content</string>
    <string name="button3">match_parent-match_parent</string>
    <string name="button11">Size dp Font dp</string>
    <string name="button12">Size dp Font sp</string>
    <string name="button13">Size px Font px</string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="linearlayout">LinearLayout</string>
    <string name="linearlayoutmozaic">LinearLayoutMozaic</string>
    <string name="dimensionunites">DimensionUnites</string>
    <string name="relativelayout">relativeLayout</string>
    <string name="btn1">btn1</string>
    <string name="btn3">btn3</string>
    <string name="btn2">btn2</string>
    <string name="relativelayout1">sample 2</string>
    <string name="btn4">btn4</string>
    <string name="btn5">btn5</string>
    <string name="button">Button</string>
    <string name="composant_g">composant G</string>
    <string name="play">PLAY</string>
    <string name="mon_textview">Mon TextView</string>
    <string name="confirmation">Confirmation</string>
    <string name="musiques">Musiques</string>
    <string name="vid_os">Vidéos</string>
    <string name="documents">Documents</string>
    <string name="corbeille">Corbeille</string>
    <string name="cam_ra">caméra</string>
    <string name="dossier">Dossier</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="maj_recyclerview">MAJ RecyclerView</string>
    <string name="tomandlola">Tom And Lola</string>
    <string name="lancer">lancer</string>
    <string name="score_lola">Score Lola : </string>
    <string name="score_tom">Score Tom : </string>
    <string name="d_2">Dé 2 : </string>
    <string name="d_1">Dé 1 : </string>
    <string name="separator">___</string>
    <string name="total">Total :</string>
    <string name="nombre_de_tour">nombre de tour :</string>
    <string name="egalit">Egalité</string>
    <string name="tom_a_gagn">Tom a gagné</string>
    <string name="lola_a_gagn">Lola a gagné</string>
    <string name="tri_s_lection">tri sélection</string>
    <string name="tri_m_thode_sort">tri méthode sort</string>
    <string name="tri_rapide">tri rapide</string>
    <string name="tri_bulle">tri à bulle</string>
    <string name="performance_tri">performance tri</string>
</resources>