<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn1"
        android:layout_toRightOf="@id/btn1"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn2"
        android:layout_alignLeft="@id/btn2"
        android:text="@string/btn3" />

</RelativeLayout>