<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@color/purple_500"
        android:text="@string/button11"
        android:textSize="20dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@color/purple_700"
        android:text="@string/button12"
        android:textSize="20sp" />

    <Button
        android:layout_width="800px"
        android:layout_height="400px"
        android:background="@color/purple_200"
        android:text="@string/button13" />

</LinearLayout>