<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PerformanceTri">

    <Button
        android:id="@+id/tri_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/tri_s_lection" />

    <Button
        android:id="@+id/tri_bulle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/tri_bulle" />

    <Button
        android:id="@+id/tri_methode_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/tri_m_thode_sort" />

</LinearLayout>