<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ComposantGraphics">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/marker_blue" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/marker_blue"
        android:text="@string/play" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mon_textview"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/monImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/bonuspack_bubble" />

    <CheckBox
        android:id="@+id/maCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ma CheckBox"
        android:textSize="20sp"
        android:textStyle="bold|italic" />


</LinearLayout>